<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="always" />
    <group android:checkableBehavior="single">
        <item android:id="@+id/sort_by"
            android:title="@string/sort_by">
            <menu>
                <item
                    android:id="@+id/menu_priority"
                    android:title="@string/priority_high"/>
                <item
                    android:id="@+id/menu_priority_low"
                    android:title="@string/priority_low"/>
            </menu>
        </item>
    </group>
    <item
        android:id="@+id/delete_all"
        android:title="@string/delete_all" />
</menu>